# community-notebook-competition

./: .gitignore  LICENSE  README.md  SUBMISSION_FORM_TEMPLATE.md  pyproject.toml
.github/workflows/: check-submission-md.yaml  check-submission-notebook.yaml  check_submission_md.py  submission-md-schema.json
scripts/: lint  test
submissions/: README.md
submissions/ciarans_demo_submission/: submission.md
submissions/cloud_native_intertidal_vegetation_monitoring_with_sentinel2_and_EOPF_Zarr/: submission.ipynb  submission.md
submissions/cloud_probability_analysis_with_sentinel_2/: submission.md
submissions/computing_leaf_area_index_using_sentinel-2_data/: folium_test.ipynb  requirements.txt  submission.md
submissions/intertidal_vegetation_monitoring_with_sentinel-2/: submission.ipynb
submissions/land_surface_temperature_and_normalised_difference_vegetation_index_in_brussels/: brussels_dissolved.geojson  submission.md
submissions/mapping_rivers_and_wetlands_in_iceland_using_sentinel_2_mndwi/: submission.ipynb  submission.md
submissions/ocean_wind_field_classification_using_cnns_and_sentinel1_level2_ocn/: submission.ipynb  submission.md
submissions/rapid_landslide_detection_via_sentinel-1_SAR_backscatter_change_analysis_in_cloud_native_zarr_format/: submission.ipynb
submissions/sentinel1_sar_flood_detection_and_mapping/: submission.ipynb  submission.md
winners/: 611_intertidal_vegetation_monitoring_with_s2.ipynb  612_cloud_probability_s2.ipynb  613_computing_lai_s2.ipynb  614_flood_change_detection_s1.ipynb  615_vad_ppi.ipynb
(+31 files in other folders)
