[project]
name = "community-notebook-competition"
version = "0.1.0"
description = "The EOPF Zarr Community Notebook Competition"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.25.1",
    "mypy>=1.18.2",
    "nbqa>=1.9.1",
    "pytest>=8.4.2",
    "python-frontmatter>=1.1.0",
    "ruff>=0.14.0",
]
