[project]
name = "community-notebook-competition"
version = "0.1.0"
description = "The EOPF Zarr Community Notebook Competition"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.25.1",
    "mypy>=1.18.2",
    "nbqa>=1.9.1",
    "pytest>=8.4.2",
    "python-frontmatter>=1.1.0",
    "ruff>=0.14.0",
    "pyproj>=3.7.2,<4",
    "pystac>=1.14.3,<2",
    "pystac-client>=0.9.0,<0.10",
    "xarray>=2026.2.0,<2027",
    "zarr>=3.1.5,<4",
    "fsspec>=2026.2.0,<2027",
    "aiohttp>=3.13.4,<4",
    "scipy>=1.17.0,<2",
    "requests>=2.32.5,<3",
    "rasterio>=1.5.0,<2",
    "pytz>=2025.2,<2026",
    "modular",
    "ipykernel>=7.1.0,<8",
    "ipyleaflet>=0.20.0,<0.21",
    "matplotlib>=3.10.8,<4",
    "folium>=0.20.0,<0.21",
]

[tool.ruff]
exclude = [
    "eopf_template.ipynb"
]

[tool.uv]
prerelease = "allow"

[tool.uv.pip]
extra-index-url = ["https://whl.modular.com/nightly/simple/"]